// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton renders as expected when passing a dark skin 1`] = `
<button
  className="btn btn--outline btn--dark btn--normal"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Dark Button
</button>
`;

exports[`OutlineButton renders as expected when passing a small size 1`] = `
<button
  className="btn btn--outline btn--undefined btn--small"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Small Button
</button>
`;

exports[`OutlineButton renders as expected when passing disabled as true 1`] = `
<button
  className="btn btn--outline btn--undefined btn--normal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Disabled Button
</button>
`;

exports[`OutlineButton renders with base props 1`] = `
<button
  className="btn btn--outline btn--undefined btn--normal"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Button
</button>
`;
